--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>♥你喜欢我吗♥</title>
+    <title>🐏SB许灿阳🐏</title>
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,12 +14,12 @@
 <body>
 
 <script src="love.js"></script>
-<h1 class="text-center head1">你喜欢我吗?</h1>
+<h1 class="text-center head1">你是撒苟🐕吗？</h1>
 <div class="container-fluid">
     <!-- row of buttons -->
     <div class="row">
-        <div class="col-xs-6 text-right"> <button class="btn btn-primary">是的！</button></div>
-        <div class="col-xs-6"> <button class="btn btn-danger" id="no-btn">喜欢个锤子！</button></div>
+        <div class="col-xs-6 text-right"> <button class="btn btn-primary">是的</button></div>
+        <div class="col-xs-6"> <button class="btn btn-danger" id="no-btn">谌岗伟是🐕！</button></div>
 
     </div>
 </div>
